# win32api-practice

./: .gitignore  README.md
PrintSpoofer-reflectivedll/: README.md
PrintSpoofer-reflectivedll/PrintSpoofer/: PrintSpoofer.vcxproj  ms-rprn_c.c  ms-rprn_s.c
PrintSpoofer-webshell/: README.md
PrintSpoofer-webshell/PrintSpoofer/: PrintSpoofer.cpp  ms-rprn_c.c
argument-spoofer/: README.md
argument-spoofer/argument-spoofer/: argument-spoofer.cpp  argument-spoofer.sln  argument-spoofer.vcxproj  argument-spoofer.vcxproj.filters
dll-hijack-digger/: README.md
dll-hijack-digger/DllHijackDigger/: API.cs  DllHijackDigger.csproj  DllHijackDigger.sln  NamedPipe.cs  Program.cs
dll-hijack-digger/ExpDll/: ExpDll.sln  ExpDll.vcxproj  dllmain.cpp
dump-lsass-via-rpc-addssp/: README.md
dump-lsass-via-rpc-addssp/dll/: dllmain.c  pch.h
dump-lsass-via-rpc-addssp/rpccall/: AddSecurityPackage_RawRPC.cpp  sspi_c.cpp  sspi_h.h
dyn-import/: Cargo.toml  README.md
dyn-import/macros/: Cargo.toml
dyn-import/src/: main.rs  winapi.rs
juicy-potato/: README.md
juicy-potato-webshell/: README.md
keylogger/: README.md
keylogger/keylogger/: keylogger.cpp  keylogger.sln  keylogger.vcxproj  keylogger.vcxproj.filters
oxid-nic-resolver/: README.md
oxid-nic-resolver/oxid-nic-resolver/: OXIDNicResolver.aps  OXIDNicResolver.cpp  OXIDNicResolver.rc  OXIDNicResolver.sln  OXIDNicResolver.vcxproj  OXIDNicResolver.vcxproj.filters  (+8 more)
procdump/: README.md
pth/: README.md
pth/pth/: Cargo.toml  build.rs
pth/pth/src/: error.rs  lsa.rs  lsa_crypt.rs  main.rs  msv.rs
wmiexec/: README.md
(+15 files in other folders)
